--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -24,7 +24,11 @@ body {
     -webkit-font-smoothing: antialiased;
     margin: 0;
     padding: 0;
-    height: 100vh;
+    height: 100%;
+
+    @media screen and (max-width: 768px) {
+        height: 100vh;
+    }
 }
 
 p {
