Add copy to clipboard action for urls generated

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,6 +1,7 @@
 @import 'settings/variables';
 @import 'partials/header';
 @import 'components/forms';
+@import 'components/short-url';
 
 * {
     box-sizing: border-box;
