--- a/src/assets/sass/components/_short-url.scss
+++ b/src/assets/sass/components/_short-url.scss
@@ -27,11 +27,25 @@
         display: flex;
         flex-direction: column;
     }
+
+    @media screen and (max-width: 640px) {
+        &-output, a {
+            overflow: hidden;
+        }
+        
+        a {
+            max-width: 90%;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+        }
+    }
 }
 
 .shorturl-actions {
     margin-left: auto;
 }
+
 .button-copy {
     cursor: pointer;
     display: flex;
