Update validation to check if  'http://' exists in longUrl

--- a/src/assets/sass/components/_short-url.scss
+++ b/src/assets/sass/components/_short-url.scss
@@ -1,8 +1,12 @@
 #url-shortened {
     display: flex;
     flex-direction: column;
-    margin-top: $gutter;
+    margin-top: $gutter * 2;
     border-radius: 5px;
+
+    @media screen and (max-width: 768px) {
+        margin-top: $gutter;
+    }
 }
 
 .shorturl {
