Add label for 'beta'

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -40,3 +40,11 @@ p {
     padding: $gutter;
     margin: auto;
 }
+
+.logo-label {
+    font-size: 10px;
+    padding: 3px 6px;
+    background-color: #67af86;
+    border-radius: 50px;
+    color: #fff;
+}
