--- a/src/assets/sass/settings/_variables.scss
+++ b/src/assets/sass/settings/_variables.scss
@@ -2,9 +2,9 @@
 $gutter: 30px;
 
 // Colors
-$dark-blue: #1F1430;
-$ocean-blue: #C8D0FF;
-$blue: #1E36F6;
+$dark-blue: #040047;
+$ocean-blue: #9FB2FF;
+$blue: #3C5BDD;
 
 // Main
 $body-bg: $dark-blue;
@@ -15,4 +15,7 @@ $base-font-family: 'Poppins', sans-serif;
 $font-size-root: 16px;
 
 // Components
-$container-width: 560px;
+$container-width: 1100px;
+
+// Header
+$header-bg: $dark-blue;
