--- a/src/assets/sass/components/_hero.scss
+++ b/src/assets/sass/components/_hero.scss
@@ -2,10 +2,26 @@
     background-color: $header-bg;
     position: relative;
     overflow: hidden;
-
+    padding-bottom: $gutter * 2;
+    color: #fff;
 
     .anchor-shape {
         position: absolute;
-        bottom: -20%;
+        bottom: -40%;
+        transition: all .3s ease;
+        animation: anchor 1s ease forwards;
+        opacity: 0;
+    }
+}
+
+@keyframes anchor {
+    from {
+        opacity: 0;
+        bottom: -100%;
+    }
+
+    to {
+        opacity: 1;
+        bottom: -40%;
     }
 }
