--- a/src/assets/sass/settings/_variables.scss
+++ b/src/assets/sass/settings/_variables.scss
@@ -8,7 +8,7 @@ $blue: #3C5BDD;
 
 // Main
 $body-bg: $dark-blue;
-$body-color: #ffffff;
+$body-color: #545363;
 
 // Font
 $base-font-family: 'Poppins', sans-serif;
@@ -19,3 +19,6 @@ $container-width: 1100px;
 
 // Header
 $header-bg: $dark-blue;
+
+// Sizes
+$widthSM: 768px;
