--- a/src/assets/sass/settings/_variables.scss
+++ b/src/assets/sass/settings/_variables.scss
@@ -5,6 +5,7 @@ $gutter: 30px;
 $dark-blue: #040047;
 $ocean-blue: #9FB2FF;
 $blue: #3C5BDD;
+$pastel-blue: #a18cbb;
 
 // Main
 $body-bg: $dark-blue;
