--- a/src/assets/sass/components/_forms.scss
+++ b/src/assets/sass/components/_forms.scss
@@ -4,15 +4,19 @@ input, button {
     border-radius: 5px;
     padding: 15px;
     border: 0;
-    box-shadow: 0 10px 20px rgba(#000, .10);
     outline: 0;
     height: 52px;
     width: 100%;
+    transition: .2s ease;
 
     &::placeholder {
         color: #bbb;
         font-style: italic;
     }
+}
+
+input:focus {
+    box-shadow: 0 0 0 3px $pastel-blue;
 }
 
 label {
