Optmize header to show all form in mobile and update copy

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -46,4 +46,8 @@ a {
     padding: $gutter;
     margin: 0 auto;
     position: relative;
+
+    @media screen and (max-width: $widthSM) {
+        padding: $gutter / 2 $gutter;
+    }
 }
