--- a/src/assets/sass/partials/_header.scss
+++ b/src/assets/sass/partials/_header.scss
@@ -2,12 +2,21 @@
     padding: $gutter / 2 0;
     align-items: center;
 
+    @media screen and (max-width: $widthSM) {
+        text-align: center;
+        .container { padding-bottom: 0; }
+    }
+
     .header-content {
         text-align: center;
         padding: ($gutter * 2) 0 $gutter;
 
         @media screen and (max-width: $widthSM) {
-            padding-bottom: 0;
+            padding: ($gutter - 10) 0 0 0;
+
+            h1 + p {
+                display: none;
+            }
         }
     }
 
