--- a/src/assets/sass/settings/_variables.scss
+++ b/src/assets/sass/settings/_variables.scss
@@ -3,9 +3,10 @@ $gutter: 30px;
 
 // Colors
 $dark-blue: #040047;
-$ocean-blue: #9FB2FF;
-$blue: #3C5BDD;
+$ocean-blue: #9fb2ff;
+$blue: #3c5bdd;
 $pastel-blue: #a18cbb;
+$orange: #dc844c;
 
 // Main
 $body-bg: $dark-blue;
