--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,6 +1,9 @@
 // Settings | Config
 @import 'settings/variables';
 
+// Utils
+@import 'utils/animations';
+
 // Partials
 @import 'partials/common';
 @import 'partials/header';
