--- a/src/assets/sass/partials/_footer.scss
+++ b/src/assets/sass/partials/_footer.scss
@@ -9,19 +9,8 @@ footer {
         .copyright-icon {
             margin: 0 5px;
             transition: all .1s ease;
-            animation: heartPulse 1s ease infinite;
+            animation: heart_pulse 1s ease infinite;
             margin-bottom: -3px;
         }
-    }
-}
-
-@keyframes heartPulse {
-    0%,
-    100% {
-        transform: scale(1);
-    }
-
-    50% {
-        transform: scale(1.1);
     }
 }
